--- a/src/translations/ua/translation.json
+++ b/src/translations/ua/translation.json
@@ -1,5 +1,5 @@
 {
-    "header": {
+    "nav": {
         "home": "Головна",
         "about": "Про нас",
         "price_list": "Прайс лист",
@@ -19,5 +19,18 @@
     },
     "home": {
         "body": "We care for your smile"
+    },
+    "footer": {
+        "working_hours": "Робочі години",
+        "mon": "Понеділок",
+        "tue": "Вівторок",
+        "wed": "Середа",
+        "thu": "Четверг",
+        "fri": "Пятниця",
+        "sat": "Субота",
+        "sun": "Неділя",
+        "closed": "Закрито",
+        "nav_title": "Навігація",
+        "rights": "Всі права захищено"
     }
 }
