--- a/src/translations/ua/translation.json
+++ b/src/translations/ua/translation.json
@@ -1,8 +1,8 @@
 {
     "nav": {
-        "home": "Головна",
+        "home_title": "Головна",
         "about": "Про нас",
-        "price_list": "Прайс лист",
+        "price_list_title": "Прайс лист",
         "gallery": "Галерея",
         "services": "Сервіси",
         "service_1": "Профілактична стоматологія",
@@ -53,5 +53,21 @@
         "closed": "Закрито",
         "nav_title": "Навігація",
         "rights": "Всі права захищено"
+    },
+
+    "price_data": {
+        "all_title": "Всі сервіси",
+        "braces_title": "Брекети",
+        "dentistry_title": "Стоматологія"
+    },
+
+    "braces": {
+        "name_1": "Брекети 15 хв",
+        "price_1": "1250 Чешських крон"
+    },
+
+    "dentistry": {
+        "name_1": "Стоматологія 15 хв",
+        "price_1": "3250 Чешських крон"
     }
 }
