--- a/src/translations/cz/translation.json
+++ b/src/translations/cz/translation.json
@@ -4,29 +4,27 @@
     "price_list_title": "Ceník",
     "smile_gallery_title": "Galerie úsměvů",
     "services_title": "Služby",
+    "contacts_title": "Kontakty",
+    "appointment_title": "Rezervujte si termín",
 
-    "nav": {
-        "service_1": "Preventivní stomatologie",
-        "service_desc_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-        "service_2": "Dentální hygiena",
-        "service_desc_2": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-        "service_3": "Parodontologie",
-        "service_desc_3": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-        "service_4": "Dětská stomatologie",
-        "service_desc_4": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-        "service_5": "Fotokompozitní výplně",
-        "service_desc_5": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-        "service_6": "Endodoncie",
-        "service_desc_6": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-        "service_7": "Protetická stomatologie",
-        "service_desc_7": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-        "service_8": "Dentoalveolární chirurgie",
-        "service_desc_8": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-        "service_9": "Implantologie",
-        "service_desc_9": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-        "contacts": "Kontakty",
-        "appointment": "Rezervujte si termín"
-    },
+    "service_1": "Preventivní stomatologie",
+    "service_desc_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
+    "service_2": "Dentální hygiena",
+    "service_desc_2": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
+    "service_3": "Parodontologie",
+    "service_desc_3": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
+    "service_4": "Dětská stomatologie",
+    "service_desc_4": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
+    "service_5": "Fotokompozitní výplně",
+    "service_desc_5": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
+    "service_6": "Endodoncie",
+    "service_desc_6": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
+    "service_7": "Protetická stomatologie",
+    "service_desc_7": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
+    "service_8": "Dentoalveolární chirurgie",
+    "service_desc_8": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
+    "service_9": "Implantologie",
+    "service_desc_9": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
 
     "home": {
         "title": "Záleží nám na tvém úsměvu",
