--- a/src/translations/ua/translation.json
+++ b/src/translations/ua/translation.json
@@ -40,6 +40,18 @@
         "answer_3": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!"
     },
 
+    "contacts": {
+        "details_title": "У вас є запитання або ви бажаєте записатися на прийом? Ми тут, щоб допомогти. Зв'яжіться з нами через форму, телефон або електронну пошту, і ми будемо раді вам допомогти.",
+        "phone": "Номер телефону",
+        "mail": "Електронна пошта",
+        "address": "Адреса",
+        "address_btn_title": "Відвідайте нас в Google картах",
+        "first_name": "Ім'я",
+        "last_name": "Прізвище",
+        "choose_service": "Виберіть сервіс",
+        "submit_btn_title": "Відправити"
+    },
+
     "smile_gallery": {
         "gallery_title": "Трансформації усмішок",
         "before": "До",
