--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -40,6 +40,18 @@
         "answer_3": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore quas, odit odio consequuntur magni, quia enim commodi suscipit, animi nobis. Magnam saepe quis alias dolorem perferendis, libero tempore temporibus!"
     },
 
+    "contacts": {
+        "details_title": "Do you have a question or need to book an appointment? We are here to help. Contact us via the form, phone or email and we will be happy to help you.",
+        "phone": "Phone number",
+        "mail": "E-mail",
+        "address": "Address",
+        "address_btn_title": "Visit us on Google",
+        "first_name": "First name",
+        "last_name": "Last name",
+        "choose_service": "Choose service",
+        "submit_btn_title": "Send"
+    },
+
     "smile_gallery": {
         "gallery_title": "Smile transformations",
         "before": "Before",
