--- a/src/translations/cz/translation.json
+++ b/src/translations/cz/translation.json
@@ -52,6 +52,10 @@
         "submit_btn_title": "Poslat"
     },
 
+    "about_us": {
+        "our_team_title": "Náš tým"
+    },
+
     "smile_gallery": {
         "gallery_title": "Proměny úsměvu",
         "before": "Před",
