--- a/src/translations/cz/translation.json
+++ b/src/translations/cz/translation.json
@@ -7,24 +7,68 @@
     "contacts_title": "Kontakty",
     "appointment_title": "Rezervujte si termín",
 
-    "service_1": "Preventivní stomatologie",
-    "service_desc_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_2": "Dentální hygiena",
-    "service_desc_2": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_3": "Parodontologie",
-    "service_desc_3": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_4": "Dětská stomatologie",
-    "service_desc_4": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_5": "Fotokompozitní výplně",
-    "service_desc_5": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_6": "Endodoncie",
-    "service_desc_6": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_7": "Protetická stomatologie",
-    "service_desc_7": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_8": "Dentoalveolární chirurgie",
-    "service_desc_8": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_9": "Implantologie",
-    "service_desc_9": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
+    "service_1": "Stomatologie",
+    "service_desc_1": "Pečujeme o váš úsměv komplexně – zdraví a krása zubů v každém věku.",
+    "service_2": "Prevence",
+    "service_desc_2": "Pravidelné kontroly, díky kterým udržíme váš chrup v perfektní kondici.",
+    "service_3": "Dentální hygiena",
+    "service_desc_3": "Profesionální čištění zubů, které vám pomůže předejít kazům a zánětům.",
+    "service_4": "Stomatochirurgie",
+    "service_desc_4": "Šetrné chirurgické zákroky, které zvládnete bez obav a bolesti.",
+    "service_5": "Kompletní rekonstrukce chrupu",
+    "service_desc_5": "Navrátíme vašemu úsměvu plnou funkci i krásu.",
+    "service_6": "Extrakce zubů moudrosti",
+    "service_desc_6": "Zbavíme vás problémových zubů moudrosti rychle a bezpečně.",
+    "service_7": "Implantologie",
+    "service_desc_7": "Chybějící zuby? Nabízíme moderní a spolehlivé řešení pomocí implantátů.",
+    "service_8": "Parodontologie",
+    "service_desc_8": "Pomůžeme vám s léčbou zánětů dásní a podpoříme zdraví vašeho parodontu.",
+    "service_9": "Endodoncie",
+    "service_desc_9": "Zachraňujeme zuby před extrakcí pečlivým ošetřením kořenových kanálků.",
+    "service_10": "Ortodoncie",
+    "service_desc_10": "Společně dosáhneme rovných zubů pomocí moderních ortodontických metod.",
+    "service_11": "Analgosedace a celková anestezie",
+    "service_desc_11": "Ošetření zcela bez bolesti pro váš maximální komfort.",
+    "service_12": "Dětská stomatologie",
+    "service_desc_12": "Šetrná péče o dětské zoubky s důrazem na prevenci a pozitivní přístup.",
+    "service_13": "Nastřižení uzdiček v ústech kojenců",
+    "service_desc_13": "Rychlý a šetrný zákrok pro pohodlnější kojení a správnou pohyblivost jazyka.",
+    "service_14": "Bělení zubů",
+    "service_desc_14": "Zářivý úsměv je na dosah – vybělení zubů bezpečně a efektivně.",
+    "service_15": "Zubní laboratoř",
+    "service_desc_15": "V naší vlastní laboratoři se postaráme o rychlou a kvalitní výrobu protetiky.",
+    "service_16": "Estetická stomatologie",
+    "service_desc_16": "Úsměv podle vašich představ – krásný, přirozený a sebevědomý.",
+    "service_17": "Estetická medicína",
+    "service_desc_17": "Omlazující procedury pro krásu a mladistvý vzhled, ve kterém se budete cítit skvěle.",
+    "service_18": "Gummy smile a bruxismus",
+    "service_desc_18": "Najdeme řešení pro nadměrné odhalování dásní i skřípání zubů.",
+    "service_19": "Omlazení a výplně rtů",
+    "service_desc_19": "Zvýrazníme krásu vašich rtů pro plný a svěží vzhled.",
+    "service_20": "Vyhlazení vrásek v obličeji",
+    "service_desc_20": "Pomůžeme vám dosáhnout přirozeně hladké a svěží pleti.",
+    "service_21": "Vstupní prohlídka",
+    "service_desc_21": "První krok ke zdravému úsměvu",
+    "service_22": "Dentální hygiena pro děti",
+    "service_desc_22": "První krok ke zdravému úsměvu.",
+    "service_23": "Hloubkové čištění zubů",
+    "service_desc_23": "První krok ke zdravému úsměvu.",
+    "service_24": "Ošetření zubního kazu",
+    "service_desc_24": "Pro zdravý a bezbolestný úsměv.",
+    "service_25": "Gummy smile",
+    "service_desc_25": "Řešení pro harmonický úsměv.",
+    "service_26": "Bruxismus",
+    "service_desc_26": "Řešení pro nepříjemné skřípání zubů.",
+    "service_27": "Keramické fazety",
+    "service_desc_27": "Cesta k dokonalému úsměvu.",
+    "service_28": "Zubní korunky",
+    "service_desc_28": "Obnova funkce a estetiky vašich zubů.",
+    "service_29": "Zubní můstky",
+    "service_desc_29": "Spolehlivé řešení pro náhradu chybějících zubů.",
+    "service_30": "Částečné a celkové snímatelné náhrady",
+    "service_desc_30": "Pohodlné řešení pro obnovení vašeho úsměvu.",
+    "service_31": "Kloubní poradna",
+    "service_desc_31": "Řešení obtíží s čelistním kloubem.",
 
     "home": {
         "title": "Záleží nám na tvém úsměvu",
