--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -7,23 +7,23 @@
     "contacts_title": "Contacts",
     "appointment_title": "Book an appointment",
 
-    "service_1": "Preventive dentistry",
+    "service_1": "Stomatology",
     "service_desc_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_2": "Dental hygiene",
+    "service_2": "Endodontics",
     "service_desc_2": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_3": "Periodontology",
+    "service_3": "Prevention",
     "service_desc_3": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_4": "Pediatric dentistry",
+    "service_4": "Dental hygiene",
     "service_desc_4": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_5": "Photocomposite fillings",
+    "service_5": "Implantology",
     "service_desc_5": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_6": "Endodontics",
+    "service_6": "Periodontology",
     "service_desc_6": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_7": "Prosthetic dentistry",
+    "service_7": "Pediatric dentistry",
     "service_desc_7": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_8": "Dentoalveolar surgery",
+    "service_8": "Dental Surgery",
     "service_desc_8": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_9": "Implantology",
+    "service_9": "Orthodontics",
     "service_desc_9": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
 
     "home": {
