--- a/src/translations/ua/translation.json
+++ b/src/translations/ua/translation.json
@@ -7,23 +7,23 @@
     "contacts_title": "Контакти",
     "appointment_title": "Записатись на прийом",
 
-    "service_1": "Профілактична стоматологія",
+    "service_1": "Стоматологія",
     "service_desc_1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_2": "Гігієна зубів",
+    "service_2": "Ендодонтія",
     "service_desc_2": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_3": "Пародонтологія",
+    "service_3": "Профілактика",
     "service_desc_3": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_4": "Дитяча стоматологія",
+    "service_4": "Гігієна зубів",
     "service_desc_4": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_5": "Фотокомпозитні пломби",
+    "service_5": "Імплантологія",
     "service_desc_5": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_6": "Ендодонтія",
+    "service_6": "Пародонтологія",
     "service_desc_6": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_7": "Ортопедична стоматологія",
+    "service_7": "Дитяча стоматологія",
     "service_desc_7": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_8": "Зубно-альвеолярна хірургія",
+    "service_8": "Стоматологічна хірургія",
     "service_desc_8": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
-    "service_9": "Імплантологія",
+    "service_9": "Ортодонтія",
     "service_desc_9": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae libero at sed soluta inventore labore cupiditate",
 
     "home": {
