--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -47,7 +47,7 @@
     "price_data": {
         "all_title": "All",
         "braces_title": "Braces",
-        "dentistry_title": "Braces"
+        "dentistry_title": "Dentistry"
     },
 
     "braces": {
