--- a/src/translations/cz/translation.json
+++ b/src/translations/cz/translation.json
@@ -88,7 +88,7 @@
         "our_team_title": "Náš tým"
     },
 
-    "price_list": {
+    "price_data": {
         "all_title": "Vše",
         "braces_title": "Rovnátka",
         "dentistry_title": "Zubní lékařství"
